objects/FFM_LoginTracker__c.object
<CustomObject>
    <fields>
        <fullName>FFM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Logins</relationshipLabel>
        <relationshipName>Logins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FFM_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FFM_Description__c</fullName>
        <inlineHelpText>Additional information on the login record</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FFM_Encrypted_Password__c</fullName>
        <description>Encrypted Password</description>
        <label>Encrypted Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>FFM_Information__c</fullName>
        <label>Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FFM_LoginType__c</fullName>
        <description>The type of login that this record is for.</description>
        <inlineHelpText>Select the type of Login record</inlineHelpText>
        <label>Login Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boomi</fullName>
                    <default>true</default>
                    <label>Boomi</label>
                </value>
                <value>
                    <fullName>Cast Iron</fullName>
                </value>
                <value>
                    <fullName>FTP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Website</fullName>
                </value>
                <value>
                    <fullName>Salesforce Production</fullName>
                </value>
                <value>
                    <fullName>Salesforce Sandbox</fullName>
                </value>
                <value>
                    <fullName>SMTP</fullName>
                </value>
                <value>
                    <fullName>SSH</fullName>
                </value>
                <value>
                    <fullName>VPN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FFM_Organization_Id__c</fullName>
        <description>Login&apos;s Organization Id</description>
        <label>Organization Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FFM_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected Automatic sharing rules will not be created</description>
        <inlineHelpText>When selected Automatic sharing rules will not be created</inlineHelpText>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FFM_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a Production login</description>
        <label>Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FFM_Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a Sandbox account</description>
        <label>Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FFM_SecurityToken__c</fullName>
        <label>SecurityToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FFM_URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FFM_Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Login</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FFM_Account__c</columns>
        <columns>FFM_Username__c</columns>
        <columns>FFM_Sandbox__c</columns>
        <columns>FFM_LoginType__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Logins_Created_This_Week</fullName>
        <columns>NAME</columns>
        <columns>FFM_Account__c</columns>
        <columns>FFM_Active__c</columns>
        <columns>FFM_Description__c</columns>
        <columns>FFM_Private__c</columns>
        <columns>FFM_Production__c</columns>
        <columns>FFM_Username__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Logins Created This Week</label>
    </listViews>
    <nameField>
        <label>LoginTracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logins</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Granted_From_Allocation__c</fullName>
        <label>Granted From Allocation</label>
    </sharingReasons>
</CustomObject>